# sert

./: .gitignore  LICENSE  README.md  pyproject.toml  sert_logo.TIF
sert/: __init__.py  losses.py
sert/_experimental/: __init__.py  _sert.py
sert/datasets/: __init__.py  simulate_timeseries.py  timeseries_classification.py
sert/models/: __init__.py  _custom_layers.py  sernn.py  sert.py
sert/preprocessing/: __init__.py  sequential.py  static.py
vignettes/: README.md  classification.ipynb  multivariate_forecasting.ipynb  regression.ipynb  timeseries_classification.ipynb
